opam-version: "1.2"
maintainer: "ilias.gar@gmail.com"
authors: ["Ilias Garnier"]
homepage: "https://github.com/igarnier/gromov"
bug-reports: "https://github.com/igarnier/gromov/issues"
dev-repo: "git+https://github.com/igarnier/gromov.git"
license: "MIT"
build: [
  ["jbuilder" "build" "-p" name "-j" jobs]
]
depends: [
  "jbuilder"                {build & >= "1.0+beta8"}
  "batteries"
  "owl"
  "camlot"
]
available: [ ocaml-version >= "4.04.1" ]
descr: "
Library to construct and manipulate metric spaces.
"
