opam-version: "1.2"
maintainer: "ilias.gar@gmail.com"
authors: ["Ilias Garnier"]
homepage: "https://github.com/igarnier/gromov"
bug-reports: "https://github.com/igarnier/gromov/issues"
dev-repo: "git+https://github.com/igarnier/gromov.git"
license: "MIT"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "dune"                {build & >= "1.1.1"}
  "batteries"
  "owl"
  "camlot"
]
available: [ ocaml-version >= "4.04.1" ]
descr: "
Library to construct and manipulate metric spaces.
"
